; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/infiniband/hw/ipath/extr_ipath_rc.c_ipath_rc_error.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/infiniband/hw/ipath/extr_ipath_rc.c_ipath_rc_error.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ipath_qp = type { %struct.TYPE_4__, i32 }
%struct.TYPE_4__ = type { i32, i32 (%struct.ib_event*, i32)*, i32 }
%struct.ib_event = type opaque
%struct.ib_event.0 = type { i32, %struct.TYPE_3__, i32 }
%struct.TYPE_3__ = type { %struct.TYPE_4__* }

@IB_EVENT_QP_LAST_WQE_REACHED = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ipath_rc_error(%struct.ipath_qp* %0, i32 %1) #0 {
  %3 = alloca %struct.ipath_qp*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.ib_event.0, align 8
  store %struct.ipath_qp* %0, %struct.ipath_qp** %3, align 8
  store i32 %1, i32* %4, align 4
  %8 = load %struct.ipath_qp*, %struct.ipath_qp** %3, align 8
  %9 = getelementptr inbounds %struct.ipath_qp, %struct.ipath_qp* %8, i32 0, i32 1
  %10 = load i64, i64* %5, align 8
  %11 = call i32 @spin_lock_irqsave(i32* %9, i64 %10)
  %12 = load %struct.ipath_qp*, %struct.ipath_qp** %3, align 8
  %13 = load i32, i32* %4, align 4
  %14 = call i32 @ipath_error_qp(%struct.ipath_qp* %12, i32 %13)
  store i32 %14, i32* %6, align 4
  %15 = load %struct.ipath_qp*, %struct.ipath_qp** %3, align 8
  %16 = getelementptr inbounds %struct.ipath_qp, %struct.ipath_qp* %15, i32 0, i32 1
  %17 = load i64, i64* %5, align 8
  %18 = call i32 @spin_unlock_irqrestore(i32* %16, i64 %17)
  %19 = load i32, i32* %6, align 4
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %21, label %43

21:                                               ; preds = %2
  %22 = load %struct.ipath_qp*, %struct.ipath_qp** %3, align 8
  %23 = getelementptr inbounds %struct.ipath_qp, %struct.ipath_qp* %22, i32 0, i32 0
  %24 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %23, i32 0, i32 2
  %25 = load i32, i32* %24, align 8
  %26 = getelementptr inbounds %struct.ib_event.0, %struct.ib_event.0* %7, i32 0, i32 2
  store i32 %25, i32* %26, align 8
  %27 = load %struct.ipath_qp*, %struct.ipath_qp** %3, align 8
  %28 = getelementptr inbounds %struct.ipath_qp, %struct.ipath_qp* %27, i32 0, i32 0
  %29 = getelementptr inbounds %struct.ib_event.0, %struct.ib_event.0* %7, i32 0, i32 1
  %30 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %29, i32 0, i32 0
  store %struct.TYPE_4__* %28, %struct.TYPE_4__** %30, align 8
  %31 = load i32, i32* @IB_EVENT_QP_LAST_WQE_REACHED, align 4
  %32 = getelementptr inbounds %struct.ib_event.0, %struct.ib_event.0* %7, i32 0, i32 0
  store i32 %31, i32* %32, align 8
  %33 = load %struct.ipath_qp*, %struct.ipath_qp** %3, align 8
  %34 = getelementptr inbounds %struct.ipath_qp, %struct.ipath_qp* %33, i32 0, i32 0
  %35 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %34, i32 0, i32 1
  %36 = load i32 (%struct.ib_event*, i32)*, i32 (%struct.ib_event*, i32)** %35, align 8
  %37 = bitcast %struct.ib_event.0* %7 to %struct.ib_event*
  %38 = load %struct.ipath_qp*, %struct.ipath_qp** %3, align 8
  %39 = getelementptr inbounds %struct.ipath_qp, %struct.ipath_qp* %38, i32 0, i32 0
  %40 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %39, i32 0, i32 0
  %41 = load i32, i32* %40, align 8
  %42 = call i32 %36(%struct.ib_event* %37, i32 %41)
  br label %43

43:                                               ; preds = %21, %2
  ret void
}

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @ipath_error_qp(%struct.ipath_qp*, i32) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
